<resources>
    <string name="app_name">MobileApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TRANG   -->
    <string name="welcome_back">Welcome back !</string>
    <string name="login">Login</string>
    <string name="your_email">Your email</string>
    <string name="hint_email">Email address</string>
    <string name="password">Password</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>

    <string name="create_account">Create Account</string>
    <string name="your_username">Your Username</string>
    <string name="hint_username">Username</string>
    <string name="already_a_user">Already a user?</string>

    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="notification_sounds">Notification &amp; Sounds</string>
    <string name="productivity">Productivity</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>

    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>
    <string name="current_password">current password</string>
    <string name="current">Current</string>
    <string name="newP">New</string>
    <string name="new_password">new password</string>
    <string name="confirm">Confirm</string>
    <string name="re_enter_new_password">re-enter new password</string>
    <string name="your_account_will_be_deleted_are_you_sure">Your account will be deleted. Are you sure?</string>
    <string name="continueD">Continue</string>

    <string name="sound">Sound</string>
    <string name="none">None</string>
    <string name="sound_1">Sound 1</string>
    <string name="sound_2">Sound 2</string>
    <string name="sound_3">Sound 3</string>
    <string name="sound_4">Sound 4</string>
    <string name="vibration">Vibration</string>
    <string name="one_shot">One-shot</string>
    <string name="waveform">Waveform</string>

    <string name="set_goals">SET GOALS</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="daily_task_goal">Daily Task Goal</string>
    <string name="weekly_task_goal">Weekly Task Goal</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_type">Feedback type</string>
    <string name="feedback_content">Feedback content</string>
    <string name="send_feedback">Send feedback</string>
    <string name="version_1_0">"App Name: TaskMaster \nVersion: 1.0.0        \nOverview: TaskMaster is a task management app that helps you organize and track your daily tasks easily.     \nKey Features        \n • Create, edit, and delete tasks      \n • Organize tasks by date and priority   \n • Set reminders to track progress  \n • Simple and easy-to-use interface      \nDeveloper Information   \n • Developer: Group 3      \n • Contact: 22520624@gm.uit.edu.vn     "</string>
    <string name="today_tasks">To-do Tasks</string>
    <string name="categories">Categories</string>
    <string name="categories_menu">Categories Menu</string>
    <string name="no_ev_today">No events today</string>
    <string name="no_ev_on">No events on</string>
    <string name="progress_overview">Progress Overview</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="calendar">Calendar</string>
    <string name="addevent">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="wr_ev_name_here">Write event name here ...</string>
    <string name="date">Date</string>
    <string name="freq">Frequency</string>
    <string name="description">Description</string>
    <string name="enter_notes">Enter your notes ...</string>
    <string name="task_name">Task name</string>
    <string name="category">Category</string>
    <string name="wr_task_name_here">Write your task name here ...</string>
    <string name="priority">Priority</string>
    <string name="search_here">Search here</string>
    <string name="delete">Delete</string>
    <string name="your_current_user">Your current user is: </string>
    <string name="enter_your_email_here">Enter your email here ...</string>
    <string name="reset_password">Reset password</string>
    <string name="re_password">Re-enter password</string>
    <string name="task_completion_ratio">Task Completion Ratio</string>
    <string name="number_of_tasks">Number of tasks</string>
    <string name="task_statistics_by_category">Task Statistics by category</string>

</resources>