<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fm_productivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProductivityFragment">

    <!--  Text Settings  -->
    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Text productivity   -->
    <TextView
        android:id="@+id/tv_productivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/productivity"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--  Text Save -->
    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_settings"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_setgoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/set_goals"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_productivity" />

    <TextView
        android:id="@+id/tv_daily_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/daily_task_goal"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_setgoal"
        app:layout_constraintTop_toBottomOf="@+id/tv_setgoal" />

    <EditText
        android:id="@+id/et_daily_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_daily_goal"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_goal" />

    <TextView
        android:id="@+id/tv_weekly_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/weekly_task_goal"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_setgoal"
        app:layout_constraintTop_toBottomOf="@+id/et_daily_goal" />

    <EditText
        android:id="@+id/et_weekly_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/enter_a_number"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tv_weekly_goal"
        app:layout_constraintTop_toBottomOf="@+id/tv_weekly_goal" />


</androidx.constraintlayout.widget.ConstraintLayout>