<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fm_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".LoginFragment">

    <!--  TextView Welcome Back   -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_back"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  TextView Login   -->
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:text="@string/login"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  TextView Your email   -->
    <TextView
        android:id="@+id/tv_your_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="8dp"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <!--  EditText Input email  -->
    <EditText
        android:id="@+id/et_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_your_email"
        tools:layout_editor_absoluteX="19dp" />

    <!--  TextView Password   -->
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:drawablePadding="8dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/ic_pass"
        app:layout_constraintStart_toStartOf="@+id/tv_your_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email_input" />

    <!--  EditText Input email  -->
    <EditText
        android:id="@+id/et_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        tools:layout_editor_absoluteX="19dp" />

    <!--  icon hide password  -->
    <ImageView
        android:id="@+id/ic_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_hide"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/et_pass_input"
        app:layout_constraintEnd_toEndOf="@+id/et_pass_input"
        app:layout_constraintTop_toTopOf="@+id/et_pass_input" />

    <!--  icon show password  -->
    <ImageView
        android:id="@+id/ic_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_show"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/et_pass_input"
        app:layout_constraintEnd_toEndOf="@+id/et_pass_input"
        app:layout_constraintTop_toTopOf="@+id/et_pass_input" />

    <!--  text forgot password  -->
    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pass_input" />

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:padding="14dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot" />

    <!-- Text don't have account -->
    <TextView
        android:id="@+id/tv_dont_have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="7dp"
        android:text="@string/don_t_have_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <!-- Text sign up -->
    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dont_have"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>